--- a/internal/compiler/microservice/templates/message.go.tmpl
+++ b/internal/compiler/microservice/templates/message.go.tmpl
@@ -170,7 +170,7 @@ func (x *{{.Name}}) Encode(field *protolizer.Field, buffer *bytes.Buffer) error 
                             if i != 0 {
                                 buffer.Write(tag.Bytes())
                             }
-                            data, err := protolizer.FastMarshal(value)
+                            data, err := protolizer.FastMarshal(x.{{$field.Name}})
                             if err != nil {
                                 return err
                             }
@@ -288,7 +288,7 @@ func (x *{{.Name}}) Encode(field *protolizer.Field, buffer *bytes.Buffer) error 
                     data.WriteTo(buffer)
                     return nil
                 {{- else if eq $field.Kind 25}}
-                    data, err := protolizer.FastMarshal(value)
+                    data, err := protolizer.FastMarshal(x.{{$field.Name}})
                     if err != nil {
                         return err
                     }  
